--- a/index.html
+++ b/index.html
@@ -89,5 +89,11 @@
         <li><a href="./public/My Hobbies.html">My Hobbies</a></li>
         <li><a href="./public/ContactMe.html">Contact Me</a></li>
     </ul>
+
+      <footer>
+    <small>
+      Copyright © 2023 Yucon Corp. All Rights Reserved.
+    </small>
+  </footer>
 </body>
 </html>
